--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "highlight.js": "^11.2.0",
-    "next": "11.1.2",
+    "next": "^12.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.39.2"
