--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "highlight.js": "^11.2.0",
+    "moment": "^2.29.1",
     "next": "^12.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
